cmake_minimum_required (VERSION 2.8)
set(CMAKE_GENERATOR "MinGW Makefiles")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/arch)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/bin)
project (addressbook)
add_compile_options(-std=c++11) 
add_executable(addressbook program.cpp)